--- a/manifests/ha/install.yaml
+++ b/manifests/ha/install.yaml
@@ -16984,7 +16984,7 @@ spec:
       containers:
       - command:
         - entrypoint.sh
-        - applicationset-controller
+        - argocd-applicationset-controller
         env:
         - name: NAMESPACE
           valueFrom:
@@ -17050,7 +17050,7 @@ spec:
               key: applicationsetcontroller.enable.progressive.syncs
               name: argocd-cmd-params-cm
               optional: true
-        image: quay.io/codefresh/applicationset:latest
+        image: quay.io/codefresh/argocd:latest
         imagePullPolicy: Always
         name: argocd-applicationset-controller
         ports:
@@ -17151,7 +17151,7 @@ spec:
         - -n
         - /usr/local/bin/argocd
         - /shared/argocd-dex
-        image: quay.io/codefresh/argocd:latest
+        image: quay.io/codefresh/argocd:v2.6.0-cap-CR-fix-rollout-rollback
         imagePullPolicy: Always
         name: copyutil
         securityContext:
@@ -17450,7 +17450,7 @@ spec:
           value: /helm-working-dir
         - name: HELM_DATA_HOME
           value: /helm-working-dir
-        image: quay.io/codefresh/argocd:latest
+        image: quay.io/codefresh/argocd:v2.6.0-cap-CR-fix-rollout-rollback
         imagePullPolicy: Always
         livenessProbe:
           failureThreshold: 3
@@ -17502,7 +17502,7 @@ spec:
         - -n
         - /usr/local/bin/argocd
         - /var/run/argocd/argocd-cmp-server
-        image: quay.io/codefresh/argocd:latest
+        image: quay.io/codefresh/argocd:v2.6.0-cap-CR-fix-rollout-rollback
         name: copyutil
         securityContext:
           allowPrivilegeEscalation: false
@@ -17780,7 +17780,7 @@ spec:
               key: server.enable.proxy.extension
               name: argocd-cmd-params-cm
               optional: true
-        image: quay.io/codefresh/argocd:latest
+        image: quay.io/codefresh/argocd:v2.6.0-cap-CR-fix-rollout-rollback
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
@@ -18016,7 +18016,7 @@ spec:
               key: application.namespaces
               name: argocd-cmd-params-cm
               optional: true
-        image: quay.io/codefresh/argocd:latest
+        image: quay.io/codefresh/argocd:v2.6.0-cap-CR-fix-rollout-rollback
         imagePullPolicy: Always
         name: argocd-application-controller
         ports:
