--- a/manifests/core-install.yaml
+++ b/manifests/core-install.yaml
@@ -15872,7 +15872,7 @@ spec:
       containers:
       - command:
         - entrypoint.sh
-        - argocd-applicationset-controller
+        - applicationset-controller
         env:
         - name: NAMESPACE
           valueFrom:
@@ -15938,7 +15938,7 @@ spec:
               key: applicationsetcontroller.enable.progressive.syncs
               name: argocd-cmd-params-cm
               optional: true
-        image: quay.io/codefresh/argocd:latest
+        image: quay.io/codefresh/applicationset:latest
         imagePullPolicy: Always
         name: argocd-applicationset-controller
         ports:
@@ -16193,7 +16193,7 @@ spec:
           value: /helm-working-dir
         - name: HELM_DATA_HOME
           value: /helm-working-dir
-        image: quay.io/codefresh/argocd:v2.6.0-cap-CR-fix-rollout-rollback
+        image: quay.io/codefresh/argocd:latest
         imagePullPolicy: Always
         livenessProbe:
           failureThreshold: 3
@@ -16245,7 +16245,7 @@ spec:
         - -n
         - /usr/local/bin/argocd
         - /var/run/argocd/argocd-cmp-server
-        image: quay.io/codefresh/argocd:v2.6.0-cap-CR-fix-rollout-rollback
+        image: quay.io/codefresh/argocd:latest
         name: copyutil
         securityContext:
           allowPrivilegeEscalation: false
@@ -16451,7 +16451,7 @@ spec:
               key: application.namespaces
               name: argocd-cmd-params-cm
               optional: true
-        image: quay.io/codefresh/argocd:v2.6.0-cap-CR-fix-rollout-rollback
+        image: quay.io/codefresh/argocd:latest
         imagePullPolicy: Always
         name: argocd-application-controller
         ports:
