--- a/manifests/ha/namespace-install.yaml
+++ b/manifests/ha/namespace-install.yaml
@@ -1577,7 +1577,7 @@ spec:
         - -n
         - /usr/local/bin/argocd
         - /shared/argocd-dex
-        image: quay.io/codefresh/argocd:v2.6.0-cap-CR-18430-del-app
+        image: quay.io/codefresh/argocd:latest
         imagePullPolicy: Always
         name: copyutil
         securityContext:
@@ -1878,7 +1878,7 @@ spec:
           value: /helm-working-dir
         - name: HELM_DATA_HOME
           value: /helm-working-dir
-        image: quay.io/codefresh/argocd:v2.6.0-cap-CR-18430-del-app
+        image: quay.io/codefresh/argocd:latest
         imagePullPolicy: Always
         livenessProbe:
           failureThreshold: 3
@@ -1930,7 +1930,7 @@ spec:
         - -n
         - /usr/local/bin/argocd
         - /var/run/argocd/argocd-cmp-server
-        image: quay.io/codefresh/argocd:v2.6.0-cap-CR-18430-del-app
+        image: quay.io/codefresh/argocd:latest
         name: copyutil
         securityContext:
           allowPrivilegeEscalation: false
@@ -2211,7 +2211,7 @@ spec:
               key: server.enable.proxy.extension
               name: argocd-cmd-params-cm
               optional: true
-        image: quay.io/codefresh/argocd:v2.6.0-cap-CR-18430-del-app
+        image: quay.io/codefresh/argocd:latest
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
@@ -2456,7 +2456,7 @@ spec:
               key: controller.kubectl.parallelism.limit
               name: argocd-cmd-params-cm
               optional: true
-        image: quay.io/codefresh/argocd:v2.6.0-cap-CR-18430-del-app
+        image: quay.io/codefresh/argocd:latest
         imagePullPolicy: Always
         name: argocd-application-controller
         ports:
