fix manifests generation

--- a/manifests/ha/namespace-install.yaml
+++ b/manifests/ha/namespace-install.yaml
@@ -2011,6 +2011,8 @@ spec:
       containers:
       - args:
         - /usr/local/bin/argocd-server
+        command:
+        - argocd-server
         env:
         - name: ARGOCD_API_SERVER_REPLICAS
           value: "2"
