--- a/manifests/ha/install.yaml
+++ b/manifests/ha/install.yaml
@@ -18732,6 +18732,8 @@ spec:
       containers:
       - args:
         - /usr/local/bin/argocd-server
+        command:
+        - argocd-server
         env:
         - name: ARGOCD_API_SERVER_REPLICAS
           value: "2"
