--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,7 +16,7 @@ env:
   # The name of the tag as supplied by the GitHub event
   SOURCE_TAG: ${{ github.ref }}
   # The image namespace where Docker image will be published to
-  IMAGE_NAMESPACE: quay.io/yonatan_codefresh
+  IMAGE_NAMESPACE: quay.io/codefresh
   # Whether to create & push image and release assets
   DRY_RUN: false
   # Whether a draft release should be created, instead of public one
