--- a/manifests/base/applicationset-controller/argocd-applicationset-controller-deployment.yaml
+++ b/manifests/base/applicationset-controller/argocd-applicationset-controller-deployment.yaml
@@ -18,15 +18,15 @@ spec:
       containers:
         - command:
             - entrypoint.sh
-            - applicationset-controller
-          image: quay.io/codefresh/applicationset:latest
+            - argocd-applicationset-controller
+          image: quay.io/codefresh/argocd:latest
           imagePullPolicy: Always
           name: argocd-applicationset-controller
           ports:
-            - containerPort: 7000
-              name: webhook
-            - containerPort: 8080
-              name: metrics
+          - containerPort: 7000
+            name: webhook
+          - containerPort: 8080
+            name: metrics
           env:
             - name: NAMESPACE
               valueFrom:
