--- a/manifests/ha/base/kustomization.yaml
+++ b/manifests/ha/base/kustomization.yaml
@@ -11,7 +11,7 @@ patches:
 images:
 - name: quay.io/argoproj/argocd
   newName: quay.io/codefresh/argocd
-  newTag: v2.8.1-cap-CR-19754-deletion-fix
+  newTag: latest
 resources:
 - ../../base/application-controller
 - ../../base/applicationset-controller
